# orbit_wars

./: .cursorignore  .cursorindexingignore  .gitignore  AGENTS.md  COLAB_LAUNCH_AND_INTEGRATION_PROMOTION.md  CONCEPTS.md  Makefile  README.md  RETROSPECTIVE.md  default_cfg.commented.yaml  default_cfg.yaml  eval_vs_sniper.py  evaluate.py  play_vs_sniper.py  pyproject.toml  rl_improvements.md
.audit/: phase3-baseline.sh  phase4-baseline.sh  src-audit-phase3.tsv  src-audit-phase4.tsv
.codex/: config.toml  hooks.json
.codex/agents/: analyst.toml  architect.toml  code-reviewer.toml  code-simplifier.toml  critic.toml  csharp-reviewer.toml  (+22 more)
.cursor/: duplication-inventory.json  goal-state.json  hooks.json  mcp.json  nearest_sniper-references.txt  settings.json
.github/: copilot-instructions.md  labels.yml
.omg/: active-manifest-review.md  prd.json  workflow-manifest.json
.understand-anything/: .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json
conf/: GUIDELINES.md  README.md  config.yaml  sweep_gen.yaml
configs/: attention_candidates_16.yaml  attention_candidates_24.yaml  attention_self_play_pool.yaml  attention_shaped_reward_training.yaml  attention_training.yaml  full_training.yaml  jax_entity_transformer_1m.yaml  jax_entity_transformer_500k.yaml  jax_entity_transformer_700k.yaml  jax_mixed_2p_4p_training.yaml  jax_self_play_shaped_reward_training.yaml  jax_training.yaml  mixed_2p_4p_training.yaml  shaped_reward_training.yaml
docs/: AGENT_CAPABILITIES.md  CURSOR.md  Issues.md  MULTI_AGENT.md  ONBOARDING.md  OWNERSHIP.md  README.md  ROADMAP.md  adding-observation-features.md  agent-native-phase2-status.md  agent-native-phase3-status.md  baseline_sweep.md  baseline_sweep_results.md  brain_dump.md  colab_runner.md  config_migration.md  experiments.md  feature-encoding-v2-ablation-runbook.md  feature-encoding-v2-design.md  feature-encoding-v2-phase0-results.md  feature-encoding-v2-pointer.md  feature-encoding-v2-symmetry.md  feature-encoding-v2.md  hydra_migration.md  kaggle_runner.md  kaggle_submission.md  kaggle_wandb_population.md  m1-factored-pointer-results.md  m2-planet-self-attention-results.md  m4-intercept-edge-results.md  nomenclature-rfc.md  operator-runbook.md
mcp-server/: package-lock.json
notebooks/: colab_compute.ipynb
scripts/: agent_context.py  agent_env.sh  audit_test_tier_leaks.py  benchmark_env.py  benchmark_factorized_sampler.py  benchmark_jax_rl.py  benchmark_m2_paired_throughput.py  build_config_frozen_defaults_picker.py  check_integration_main_promotion.py  colab_worker_entry.py  compare_attention_candidates.py  debug_ppo_nan_fast.py  eval_vs_sniper.py  evaluate.py  evaluate_m1_gates.py  generate_default_cfg.py  install_understand_anything_cursor.sh  issues_jax_30update_benchmark.py  jax_trace_hygiene.sh  kaggle_runner.py  kaggle_runtime_env.py  kaggle_wandb_population.py  kaggle_worker_entry.py  make_wandb_sweep.py  omg_workflow_manifest.py  play_vs_sniper.py  profile_submission_turn.py  roadmap.py  roadmap_claims.py  roadmap_git.py  run_artifact_worker.py  run_m1_ablation.py  run_m2_ablation.py  run_terminal_reward_ablation.py  run_validation_seed_sweep.sh  spike_factored_shield.py  spike_feature_encoding_v2_phase0.py  summarize_sps_vram_profile.py  summarize_validation_seed_sweep.py  sync_omg_cursor.py  (+1 more)
src/: __init__.py  artifact_pipeline.py  checkpoint_compat.py  checkpoint_retention.py  cli.py  conf_schema.py  config.py  constants.py  curriculum.py  env.py  feature_registry.py  features.py  jax_device.py  jax_env.py  jax_features.py  jax_policy.py  jax_ppo.py  jax_train.py  metric_registry.py  normalization.py  opponent_pool.py  opponents.py  policy.py  ppo.py  replay.py  run_paths.py  seed_scheduler.py  telemetry.py  train.py  trajectory_shield.py
tests/: conftest.py  jax_warmup.py  test_action_codec.py  test_action_codec_safe_masks.py  test_admission_gate.py  test_admission_throughput.py  test_agent_capability_map.py  test_agent_context.py  test_artifact_pipeline.py  test_benchmark_cli.py  test_benchmark_progress.py  test_bracket_lineage.py  test_bracket_qualifier.py  test_bracket_scheduler.py  test_bracket_self_play.py  test_bracket_state.py  test_bracket_training_hooks.py  test_bracket_trueskill.py  test_checkpoint_compat.py  test_checkpoint_eval.py  test_checkpoint_eval_unified.py  test_cli_benchmark_gate.py  test_cli_eval_bracket.py  test_cli_eval_jobs_cancel.py  test_cli_eval_results.py  test_cli_eval_status.py  test_cli_promote.py  test_cli_rollout_phase_profile.py  test_cli_runs.py  test_cli_sweep.py  test_cli_tournament_proof.py  test_cli_train_hosts.py  test_colab_cli.py  test_colab_runner.py  test_comet_generation.py  test_config_consolidation.py  test_config_frozen_defaults_picker.py  test_configs.py  test_continuous_ship_action.py  test_curriculum.py  (+138 more)
(+1005 files in other folders)
