[project]
name = "orbit-wars"
version = "0.1.0"
description = "Versioned Orbit Wars reinforcement-learning tutorial implementation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flax",
    "jax[cuda13]; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "jax; sys_platform != 'linux' or platform_machine != 'x86_64'",
    "optax",
    "kaggle-environments",
    "numpy",
    "pyyaml",
    "hydra-core",
    "wandb>=0.27.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
