[project]
name = "orbit-wars"
version = "0.1.0"
description = "Versioned Orbit Wars reinforcement-learning tutorial implementation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flax",
    "jax[cuda13]; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "jax; sys_platform != 'linux' or platform_machine != 'x86_64'",
    "optax",
    "kaggle-environments",
    "numpy",
    "pyyaml",
    "hydra-core",
    "wandb>=0.27.0",
    "kaggle>=2.1.2",
]

[project.scripts]
ow = "src.cli:main"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    "--strict-markers",
]
markers = [
    "slow: integration or expensive tests excluded from the fast dev loop",
    "sweep: full W&B sweep Cartesian compose grid (weekly/explicit only)",
    "jax: tests that import or execute JAX code",
    "kaggle_parity: JAX env mechanics aligned with Kaggle/reference game logic",
    "config: Hydra config, telemetry, and schema tests",
    "features: Python/JAX feature encoding and registry tests",
    "jax_env: JAX environment and parity tests",
    "policy: policy, PPO, rollout, and trajectory shield tests",
    "artifacts: artifact pipeline, replay, and packaging tests",
    "curriculum: curriculum controller and training-loop tests",
]
venv = ".venv"

[tool.ty.environment]
root = ["."]
python-version = "3.12"

[tool.pyright]
include = ["src", "tests", "scripts"]
extraPaths = ["."]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pyrefly]
project-includes = [
    "src",
    "tests",
    "scripts",
]
search-path = ["."]
python-version = "3.12.0"
infer-with-first-use = false
[tool.pyrefly.errors]
missing-attribute = false
unnecessary-type-conversion = false

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "pytest>=8.3.0",
    "pytest-xdist>=3.6.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_empty = true

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"
